my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.4/errors/EARGD/EARGD.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_EARGD.dml:7:7: In test
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_EARGD.dml:10:17: error EARGD: duplicate method parameter name 'x'
